<resources>

    <string name="app_name">我送酒</string>
    <string name="tel">手机号</string>
    <string name="pwd">密码</string>
    <string name="confrm_pwd">确认密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="register_new">免费注册</string>
    <string name="login">登   录</string>
    <string name="register">注册</string>
    <string name="very_code">验证码</string>
    <string name="obatin_code">获取验证码</string>
    <string name="hot_search">热门搜索:</string>
    <string name="input_hot_hint">品牌、名称、货名</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载中</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">点击查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="goods_price">￥ %s</string>
    <string name="back">back</string>
    <string name="detail">详情</string>
    <string name="select_all">反选</string>
    <string name="payout">结算</string>
    <string name="goods_drink">名酒</string>
    <string name="price">价格</string>
    <string name="loginorregister">登录/注册</string>
    <string name="myorder">我的订单</string>
    <string name="send_wine">我送酒</string>
    <string name="search">搜索</string>
    <string name="drink">酒文化</string>
    <string name="cart">购物车</string>

</resources>