<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_linearlayout_footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_bar_bg_p"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/frame_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/widget_bar_bg"
        android:button="@null"
        android:checked="true"
        android:drawablePadding="5dip"
        android:drawableTop="@drawable/icon_home"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/send_wine"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12" />

    <RadioButton
        android:id="@+id/frame_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/widget_bar_bg"
        android:button="@null"
        android:checked="false"
        android:drawablePadding="5dip"
        android:drawableTop="@drawable/icon_search"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12" />

    <RadioButton
        android:id="@+id/frame_wine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/widget_bar_bg"
        android:button="@null"
        android:checked="false"
        android:drawablePadding="5dip"
        android:drawableTop="@drawable/icon_wine"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/drink"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12" />

    <RadioButton
        android:id="@+id/frame_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/widget_bar_bg"
        android:button="@null"
        android:checked="false"
        android:drawablePadding="5dip"
        android:drawableTop="@drawable/icon_cart"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/cart"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12" />

</LinearLayout>