<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include layout="@layout/nav_top_v1" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.sendwine.app.ui.widgets.ClearableEditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_weight="1"
                android:background="@drawable/shape_edittext"
                android:drawableLeft="@drawable/input_icon_user"
                android:drawablePadding="10dip"
                android:hint="@string/tel"
                android:inputType="phone"
                android:padding="5dip"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/very_code"
                    android:layout_width="wrap_content"
                    android:layout_height="40dip"
                    android:background="@drawable/shape_edittext"
                    android:hint="@string/very_code"
                    android:inputType="text"
                    android:minWidth="120dip"
                    android:padding="5dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/get_code"
                    android:layout_width="0dip"
                    android:layout_height="45dip"
                    android:layout_gravity="right|center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dip"
                    android:text="@string/obatin_code"
                    android:textColor="@color/gray" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.sendwine.app.ui.widgets.ClearableEditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:background="@drawable/shape_edittext"
                android:drawableLeft="@drawable/input_icon_lock"
                android:drawablePadding="10dip"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:padding="5dip"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.sendwine.app.ui.widgets.ClearableEditText
                android:id="@+id/confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:background="@drawable/shape_edittext"
                android:drawableLeft="@drawable/input_icon_lock"
                android:drawablePadding="10dip"
                android:hint="@string/confrm_pwd"
                android:inputType="textPassword"
                android:padding="5dip"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="45dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1"
                android:background="@drawable/shape_corner"
                android:drawablePadding="10dip"
                android:hint="@string/register"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18" />
        </TableRow>
    </TableLayout>

</LinearLayout>